--- a/android/app/src/main/res/layout/launch_screen.xml
+++ b/android/app/src/main/res/layout/launch_screen.xml
@@ -6,8 +6,8 @@
     android:background="@color/primary_dark"
     >
     <ImageView 
-    android:layout_width="170dp"
-    android:layout_height="170dp"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:src="@drawable/launch_screen" 
     android:scaleType="centerCrop" 
     android:layout_centerInParent="true"
